--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>라라네 벽돌깨기</title>
+    <title>민이벽돌깨기</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700;900&display=swap');
         
@@ -74,7 +74,7 @@
     </style>
 </head>
 <body>
-    <div class="game-title">라라네 벽돌깨기</div>
+    <div class="game-title"> 민성이 벽돌깨기</div>
     <canvas id="gameCanvas" width="480" height="768"></canvas>
     <script src="game.js"></script>
 </body>
